get rest of images

--- a/homepage/html/use-case/agencies.html
+++ b/homepage/html/use-case/agencies.html
@@ -1,20 +1,37 @@
 <main class="page page--use-case page--use-case-agencies">
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
+            <div class="wrapper-left-screens">
+                <div class="wrapper-left-screens-cube">
+                    <div class="wrapper-left-screens-cube-face wrapper-left-screens-cube-face-back">
+                        <figure class="wrapper-left-screens-cube-face-figure">
+                            <img class="wrapper-left-screens-cube-face-figure-image" src="https://cdn.riddle.com/website/riddle/2024/home/hero/home-hero-embed.webp">
+                        </figure>
+                    </div>
+                    <div class="wrapper-left-screens-cube-face wrapper-left-screens-cube-face-back wrapper-left-screens-cube-face-back-alt">
+                        <figure class="wrapper-left-screens-cube-face-figure">
+                            <img class="wrapper-left-screens-cube-face-figure-image" src="https://cdn.riddle.com/website/riddle/2024/home/hero/home-hero-form.webp">
+                        </figure>
+                    </div>
+                </div>
+            </div>
             <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers.webp"/>
+                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/agency/agency.webp"/>
             </figure>
         </aside>
         <div class="wrapper-right">
             <div class="hero hero--use-case">
                 <div class="hero-content">
                     <div class="hero-content-text">
+                        <h1 class="hero-content-text-title">
+                            Publishers
+                        </h1>
                         <span class="hero-content-text-heading">
-                            <h1 class="hero-content-text-heading-em">
-                                Boost your engagement and revenue with interactive content.
-                            </h1>
+                            <h2 class="hero-content-text-heading-em">
+                                Meet your clients’ goals with interactive content.
+                            </h2>
                             <span>
-                                Make it easier for your team to publish engaging content that earns your business money.
+                                Introduce your clients to powerful interactive content and quizzes that will help grow their business.
                             </span>
                         </span>
                         <div class="hero-content-text-footer">
@@ -31,26 +48,26 @@
         </div>
     </section>
     
-    <!-- PUBLISH -->
+    <!-- BUILD -->
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
             <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-engagement.webp"/>
+                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/agency/agency-build.webp"/>
             </figure>
         </aside>
         <div class="wrapper-right">
             <div class="section section--timeline">
                 <h3 class="section-header">
-                    Publish unique, interactive content that engages users.
+                    Build cost-efficient interactive content for clients.
                 </h3>
                 <div class="section-body">
-                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-fill-2">
+                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-fill-3">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Increase engagement and time on site 
+                                Make easy-to-build quizzes on any budget
                             </h5>
                             <p class="card-header-body">
-                                Users spend up to 57% more time on your website when they engage with Riddle content. This positively impacts your SEO score and brings more opportunities to monetize content.
+                                Create impressive client solutions with 15 types of customizable, interactive content. It’s quick and easy to build client campaigns, quizzes and competitions to suit any budget.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -58,17 +75,17 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 111.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-time.webp"/>
+                                <img style="width: 100%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/agency/budget.webp"/>
                             </figure>
                         </div>
                     </article>
-                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card-gradient-fill-2">
+                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Design and customize rich, branded content
+                                Share Riddle tools with flexible plans
                             </h5>
                             <p class="card-header-body">
-                                Create up to 15 types of interactive content in your own branding — no coding needed. With our simple, visual builder, it’s never been easier to publish rich content experiences.
+                                Get all the benefits for your agency too, whether that’s boosting engagement, insights or revenue. We offer a range of flexible plans, with no long-term contracts or sign up fees.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -76,7 +93,7 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 104%; transform: translateY(-1%); left: auto; right: 0;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-branded.webp"/>
+                                <img style="width: 106%; transform: translateX(-47.3%);" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/agency/plans.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -85,26 +102,26 @@
         </div>
     </section>
     
-    <!-- MONETIZE -->
+    <!-- INSIGHTS -->
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
             <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-monetize.webp"/>
+                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/agency/agency-insights.webp"/>
             </figure>
         </aside>
         <div class="wrapper-right">
             <div class="section section--timeline section--timeline-rows">
                 <h3 class="section-header">
-                    Monetize your content and convert leads.
+                    Use engagement to generate deep insights and data.
                 </h3>
                 <div class="section-body">
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-horizontal card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Embed ads and create sponsored content
+                                Increase user engagement with shareable content
                             </h5>
                             <p class="card-header-body">
-                                Increase your ad inventory by 8 to 10x with embedded banner and video ads. Get the tools to create branded sponsored content such as advertorials and custom ad campaigns.
+                                Help clients improve their audience engagement with shareable interactive content. Kickstart a conversation, make a viral quiz, or host a competition to drive client traffic.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -112,17 +129,17 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-sponsor.webp"/>
+                                <img style="width: 103.5%; left: auto; right: -3%; transform: none;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/agency/engagement.webp"/>
                             </figure>
                         </div>
                     </article>
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-horizontal card--gradient-flip card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Generate and convert high-quality leads
+                                Get valuable insights and first-party data
                             </h5>
                             <p class="card-header-body">
-                                Riddle helps generate more high-quality leads that you can convert later. Embed lead forms into Riddle content, then organize and connect lead data with your marketing tools.
+                                Use interactive content to gather user insights and first-party data. Run market research for your clients to help them shape user segments. Whether that’s through quizzes, polls, or surveys.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -130,7 +147,7 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-lead.webp"/>
+                                <img style="width: 123%; left: -1.5%; transform: translateY(-3%);" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/agency/data.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -143,48 +160,48 @@
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
             <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-insights.webp"/>
+                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/agency/agency-leads.webp"/>
             </figure>
         </aside>
         <div class="wrapper-right">
             <div class="section section--timeline">
                 <h3 class="section-header">
-                    Use first-party data and powerful user insights.
+                    Generate leads and optimize content for conversions.
                 </h3>
                 <div class="section-body">
-                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-fill-2">
+                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Gather deep user insights and data
+                                Convert high-quality leads into customers 
                             </h5>
                             <p class="card-header-body">
-                                Get reliable first-party data and detailed insights when users participate in your Riddle content. Whether that’s from opinion polls, topical quizzes, surveys or competitions.
+                                Generate high-quality leads for your clients by adding lead forms into content. Connect data to their marketing tools, create segments, and target personalized content.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
                             </a>
                         </header>
-                        <div class="card-footer" style="padding-bottom: 94%">
+                        <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-profile.webp"/>
+                                <img style="width: 99%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/agency/leads.webp"/>
                             </figure>
                         </div>
                     </article>
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-flip">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Personalize, target, and optimize content 
+                                Track, measure, and optimize client quizzes
                             </h5>
                             <p class="card-header-body">
-                                Use Riddle content to learn about your audience and shape your own user segments. You'll get valuable data to help target, personalize, and measure the impact of your content.
+                            Measure data from your clients’ quiz funnels, from start and completion rates to leads. Connect to your clients’ tracking software to optimize your content for conversions.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
                             </a>
                         </header>
-                        <div class="card-footer" style="padding-bottom: 94%">
+                        <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-personalize.webp"/>
+                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/agency/measure.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -648,7 +665,7 @@
                     <article class="card card--gray card--center card--full card--trial">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                            Want to get to know your customers better?
+                                Want to deliver impressive content solutions?
                             </h5>
                         </header>
                         <div class="card-body">
