--- a/homepage/html/use-case/brands.html
+++ b/homepage/html/use-case/brands.html
@@ -1,20 +1,37 @@
 <main class="page page--use-case page--use-case-brands">
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
+            <div class="wrapper-left-screens">
+                <div class="wrapper-left-screens-cube">
+                    <div class="wrapper-left-screens-cube-face wrapper-left-screens-cube-face-back">
+                        <figure class="wrapper-left-screens-cube-face-figure">
+                            <img class="wrapper-left-screens-cube-face-figure-image" src="https://cdn.riddle.com/website/riddle/2024/home/hero/home-hero-embed.webp">
+                        </figure>
+                    </div>
+                    <div class="wrapper-left-screens-cube-face wrapper-left-screens-cube-face-back wrapper-left-screens-cube-face-back-alt">
+                        <figure class="wrapper-left-screens-cube-face-figure">
+                            <img class="wrapper-left-screens-cube-face-figure-image" src="https://cdn.riddle.com/website/riddle/2024/home/hero/home-hero-form.webp">
+                        </figure>
+                    </div>
+                </div>
+            </div>
             <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers.webp"/>
+                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/brands.webp"/>
             </figure>
         </aside>
         <div class="wrapper-right">
             <div class="hero hero--use-case">
                 <div class="hero-content">
                     <div class="hero-content-text">
+                        <h1 class="hero-content-text-title">
+                            Brands
+                        </h1>
                         <span class="hero-content-text-heading">
-                            <h1 class="hero-content-text-heading-em">
-                                Boost your engagement and revenue with interactive content.
-                            </h1>
+                            <h2 class="hero-content-text-heading-em">
+                                Turn your traffic into customers with interactive content.
+                            </h2>
                             <span>
-                                Make it easier for your team to publish engaging content that earns your business money.
+                                Use smart, interactive content to understand your market better and elevate your brand strategy.
                             </span>
                         </span>
                         <div class="hero-content-text-footer">
@@ -41,16 +58,16 @@
         <div class="wrapper-right">
             <div class="section section--timeline">
                 <h3 class="section-header">
-                    Publish unique, interactive content that engages users.
+                    Create engaging content that helps grow your brand.
                 </h3>
                 <div class="section-body">
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Increase engagement and time on site 
+                                Increase user engagement and time on site
                             </h5>
                             <p class="card-header-body">
-                                Users spend up to 57% more time on your website when they engage with Riddle content. This positively impacts your SEO score and brings more opportunities to monetize content.
+                                Users who interact with Riddle content stay 57% longer. Our 15 types of interactive, customizable content will boost your user engagement — and positively impact your SEO score.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -65,10 +82,10 @@
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card-gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Design and customize rich, branded content
+                                Quickly get user feedback and opinions
                             </h5>
                             <p class="card-header-body">
-                                Create up to 15 types of interactive content in your own branding — no coding needed. With our simple, visual builder, it’s never been easier to publish rich content experiences.
+                                Make it easy for anyone on your team to make their own feedback polls and surveys. Find out what’s working and what’s not, so you can optimize your content and develop your brand.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -95,16 +112,16 @@
         <div class="wrapper-right">
             <div class="section section--timeline section--timeline-rows">
                 <h3 class="section-header">
-                    Monetize your content and convert leads.
+                    Gather deep insights and segment your customers.
                 </h3>
                 <div class="section-body">
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-horizontal card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Embed ads and create sponsored content
+                                Get insights from your own market research
                             </h5>
                             <p class="card-header-body">
-                                Increase your ad inventory by 8 to 10x with embedded banner and video ads. Get the tools to create branded sponsored content such as advertorials and custom ad campaigns.
+                                Run your own research to learn about your audience needs, motivations, and behaviors. Get first-party data and deep user insights to help shape detailed consumer segments.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -119,10 +136,10 @@
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-horizontal card--gradient-flip card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Generate and convert high-quality leads
+                                Target the right people, at the right time
                             </h5>
                             <p class="card-header-body">
-                                Riddle helps generate more high-quality leads that you can convert later. Embed lead forms into Riddle content, then organize and connect lead data with your marketing tools.
+                                Turn users into happy customers, by giving them relevant, timely content. Use segments and data to target content, or personalize emails to user needs and preferences.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -149,16 +166,16 @@
         <div class="wrapper-right">
             <div class="section section--timeline">
                 <h3 class="section-header">
-                    Use first-party data and powerful user insights.
+                    Convert high-quality leads and monetize content.
                 </h3>
                 <div class="section-body">
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Gather deep user insights and data
+                                Generate and organize high-quality leads 
                             </h5>
                             <p class="card-header-body">
-                                Get reliable first-party data and detailed insights when users participate in your Riddle content. Whether that’s from opinion polls, topical quizzes, surveys or competitions.
+                                Generate high-quality leads from quizzes where users are already engaged. Add lead forms into quizzes, organize and tag data, and connect to your marketing tools. 
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -173,10 +190,10 @@
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-flip">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Personalize, target, and optimize content 
+                                Improve conversion rate with recommendations
                             </h5>
                             <p class="card-header-body">
-                                Use Riddle content to learn about your audience and shape your own user segments. You'll get valuable data to help target, personalize, and measure the impact of your content.
+                                Use Riddle throughout your sales funnel to get valuable insights and first-party data. Make product recommendations using dynamic, targeted content and personalized emails.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -648,7 +665,7 @@
                     <article class="card card--gray card--center card--full card--trial">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                            Want to get to know your customers better?
+                                Want to develop your brand and grow customers?
                             </h5>
                         </header>
                         <div class="card-body">
