--- a/homepage/html/use-case/nonprofits.html
+++ b/homepage/html/use-case/nonprofits.html
@@ -1,20 +1,37 @@
 <main class="page page--use-case page--use-case-nonprofits">
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
+            <div class="wrapper-left-screens">
+                <div class="wrapper-left-screens-cube">
+                    <div class="wrapper-left-screens-cube-face wrapper-left-screens-cube-face-back">
+                        <figure class="wrapper-left-screens-cube-face-figure">
+                            <img class="wrapper-left-screens-cube-face-figure-image" src="https://cdn.riddle.com/website/riddle/2024/home/hero/home-hero-embed.webp">
+                        </figure>
+                    </div>
+                    <div class="wrapper-left-screens-cube-face wrapper-left-screens-cube-face-back wrapper-left-screens-cube-face-back-alt">
+                        <figure class="wrapper-left-screens-cube-face-figure">
+                            <img class="wrapper-left-screens-cube-face-figure-image" src="https://cdn.riddle.com/website/riddle/2024/home/hero/home-hero-form.webp">
+                        </figure>
+                    </div>
+                </div>
+            </div>
             <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers.webp"/>
+                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/nonprofit/nonprofit.webp"/>
             </figure>
         </aside>
         <div class="wrapper-right">
             <div class="hero hero--use-case">
                 <div class="hero-content">
                     <div class="hero-content-text">
+                        <h1 class="hero-content-text-title">
+                            Non-profit Organizations
+                        </h1>
                         <span class="hero-content-text-heading">
-                            <h1 class="hero-content-text-heading-em">
-                                Boost your engagement and revenue with interactive content.
-                            </h1>
+                            <h2 class="hero-content-text-heading-em">
+                                Grow support for your cause with interactive content.
+                            </h2>
                             <span>
-                                Make it easier for your team to publish engaging content that earns your business money.
+                                Create interactive content that educates, spreads awareness, and starts conversations. All within budget.
                             </span>
                         </span>
                         <div class="hero-content-text-footer">
@@ -41,16 +58,16 @@
         <div class="wrapper-right">
             <div class="section section--timeline">
                 <h3 class="section-header">
-                    Publish unique, interactive content that engages users.
+                    Build affordable, interactive content that makes change happen.
                 </h3>
                 <div class="section-body">
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Increase engagement and time on site 
+                                Create engaging, educational content
                             </h5>
                             <p class="card-header-body">
-                                Users spend up to 57% more time on your website when they engage with Riddle content. This positively impacts your SEO score and brings more opportunities to monetize content.
+                                Educate audiences with 15 types of flexible, interactive content that makes an impact. From quizzes to competitions, surveys, and petitions, get ready to inspire action.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -65,10 +82,10 @@
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card-gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Design and customize rich, branded content
+                                Increase awareness with shareable content
                             </h5>
                             <p class="card-header-body">
-                                Create up to 15 types of interactive content in your own branding — no coding needed. With our simple, visual builder, it’s never been easier to publish rich content experiences.
+                                Go viral with shareable, interactive content supporting your cause. Whether it’s a poll that starts a discussion or a quiz that makes people think. Get traffic and spread your message.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -95,16 +112,16 @@
         <div class="wrapper-right">
             <div class="section section--timeline section--timeline-rows">
                 <h3 class="section-header">
-                    Monetize your content and convert leads.
+                    Find opportunities to get passionate donors.
                 </h3>
                 <div class="section-body">
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-horizontal card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Embed ads and create sponsored content
+                                Turn high-quality leads into donors
                             </h5>
                             <p class="card-header-body">
-                                Increase your ad inventory by 8 to 10x with embedded banner and video ads. Get the tools to create branded sponsored content such as advertorials and custom ad campaigns.
+                                Generate high-quality leads for fundraising, and connect lead data to your marketing tools. In a recent experiment, we achieved a lead opt-in rate of 43% — you could do the same.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -119,10 +136,10 @@
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-horizontal card--gradient-flip card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Generate and convert high-quality leads
+                                Use insights to target and personalize content
                             </h5>
                             <p class="card-header-body">
-                                Riddle helps generate more high-quality leads that you can convert later. Embed lead forms into Riddle content, then organize and connect lead data with your marketing tools.
+                                Get reliable first-party data and deep insights when users participate in your Riddle content. Use this to make segments, target dynamic content and personalize emails to your leads.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -134,57 +151,21 @@
                             </figure>
                         </div>
                     </article>
-                </div>
-            </div>
-        </div>
-    </section>
-    
-    <!-- DATA -->
-    <section class="wrapper wrapper--side-scroll">
-        <aside class="wrapper-left">
-            <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-insights.webp"/>
-            </figure>
-        </aside>
-        <div class="wrapper-right">
-            <div class="section section--timeline">
-                <h3 class="section-header">
-                    Use first-party data and powerful user insights.
-                </h3>
-                <div class="section-body">
-                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-fill-2">
+                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-horizontal card--gradient-flip card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Gather deep user insights and data
+                                Track, measure, and optimize quizzes
                             </h5>
                             <p class="card-header-body">
-                                Get reliable first-party data and detailed insights when users participate in your Riddle content. Whether that’s from opinion polls, topical quizzes, surveys or competitions.
+                                Measure data from your quiz funnels, from start and completion rates to leads. Connect to your tracking software to find opportunities to optimize your content for conversions.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
                             </a>
                         </header>
-                        <div class="card-footer" style="padding-bottom: 94%">
+                        <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-profile.webp"/>
-                            </figure>
-                        </div>
-                    </article>
-                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-flip">
-                        <header class="card-header">
-                            <h5 class="card-header-heading">
-                                Personalize, target, and optimize content 
-                            </h5>
-                            <p class="card-header-body">
-                                Use Riddle content to learn about your audience and shape your own user segments. You'll get valuable data to help target, personalize, and measure the impact of your content.
-                            </p>
-                            <a href="#" class="card-header-action">
-                                Learn more
-                            </a>
-                        </header>
-                        <div class="card-footer" style="padding-bottom: 94%">
-                            <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-personalize.webp"/>
+                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-lead.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -648,7 +629,7 @@
                     <article class="card card--gray card--center card--full card--trial">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                            Want to get to know your customers better?
+                                Want to get the word out about your cause?
                             </h5>
                         </header>
                         <div class="card-body">
