--- a/homepage/html/use-case/sports.html
+++ b/homepage/html/use-case/sports.html
@@ -1,20 +1,37 @@
 <main class="page page--use-case page--use-case-sports">
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
+            <div class="wrapper-left-screens">
+                <div class="wrapper-left-screens-cube">
+                    <div class="wrapper-left-screens-cube-face wrapper-left-screens-cube-face-back">
+                        <figure class="wrapper-left-screens-cube-face-figure">
+                            <img class="wrapper-left-screens-cube-face-figure-image" src="https://cdn.riddle.com/website/riddle/2024/home/hero/home-hero-embed.webp">
+                        </figure>
+                    </div>
+                    <div class="wrapper-left-screens-cube-face wrapper-left-screens-cube-face-back wrapper-left-screens-cube-face-back-alt">
+                        <figure class="wrapper-left-screens-cube-face-figure">
+                            <img class="wrapper-left-screens-cube-face-figure-image" src="https://cdn.riddle.com/website/riddle/2024/home/hero/home-hero-form.webp">
+                        </figure>
+                    </div>
+                </div>
+            </div>
             <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers.webp"/>
+                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/sporrts/sporrts.webp"/>
             </figure>
         </aside>
         <div class="wrapper-right">
             <div class="hero hero--use-case">
                 <div class="hero-content">
                     <div class="hero-content-text">
+                        <h1 class="hero-content-text-title">
+                            Sports Teams & Leagues
+                        </h1>
                         <span class="hero-content-text-heading">
-                            <h1 class="hero-content-text-heading-em">
-                                Boost your engagement and revenue with interactive content.
-                            </h1>
+                            <h2 class="hero-content-text-heading-em">
+                                Engage and convert your fans with interactive content.
+                            </h2>
                             <span>
-                                Make it easier for your team to publish engaging content that earns your business money.
+                                Fire up your fan base and give them a voice with interactive sports content you can easily monetize.
                             </span>
                         </span>
                         <div class="hero-content-text-footer">
@@ -41,16 +58,16 @@
         <div class="wrapper-right">
             <div class="section section--timeline">
                 <h3 class="section-header">
-                    Publish unique, interactive content that engages users.
+                    Create content that builds loyalty and engagement.
                 </h3>
                 <div class="section-body">
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Increase engagement and time on site 
+                                Challenge fans with shareable sports content
                             </h5>
                             <p class="card-header-body">
-                                Users spend up to 57% more time on your website when they engage with Riddle content. This positively impacts your SEO score and brings more opportunities to monetize content.
+                                Fans love testing and proving their sporting knowledge. So with 15 types of interactive content and quizzes, you can create branded, viral content — without writing a single line of code.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -65,10 +82,10 @@
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card-gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Design and customize rich, branded content
+                                Empower fans to react and express their opinions
                             </h5>
                             <p class="card-header-body">
-                                Create up to 15 types of interactive content in your own branding — no coding needed. With our simple, visual builder, it’s never been easier to publish rich content experiences.
+                                Users who engage with interactive content stay 57% longer. Fans can have their say and react to sporting events with polls. And with the Riddle Predictor, fans can guess results too. 
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -119,10 +136,10 @@
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-horizontal card--gradient-flip card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Generate and convert high-quality leads
+                                Get leads through quizzes and competitions
                             </h5>
                             <p class="card-header-body">
-                                Riddle helps generate more high-quality leads that you can convert later. Embed lead forms into Riddle content, then organize and connect lead data with your marketing tools.
+                                Generate more high-quality leads by adding lead forms into competitions and quizzes. Leverage Riddle at each point of the sales funnel, and connect lead data to your marketing tools.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -149,16 +166,16 @@
         <div class="wrapper-right">
             <div class="section section--timeline">
                 <h3 class="section-header">
-                    Use first-party data and powerful user insights.
+                    Use first-party data and powerful fan insights.
                 </h3>
                 <div class="section-body">
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Gather deep user insights and data
+                                Gather deep fan insights and data
                             </h5>
                             <p class="card-header-body">
-                                Get reliable first-party data and detailed insights when users participate in your Riddle content. Whether that’s from opinion polls, topical quizzes, surveys or competitions.
+                                Get reliable first-party data and unique insights around fan motivations and behaviors. When fans engage with Riddle quizzes you learn more, helping you optimize your content.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -173,10 +190,10 @@
                     <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-flip">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                                Personalize, target, and optimize content 
+                                Tailor promotions and content to fans
                             </h5>
                             <p class="card-header-body">
-                                Use Riddle content to learn about your audience and shape your own user segments. You'll get valuable data to help target, personalize, and measure the impact of your content.
+                                Target ticket sales and promotions to the right fans at the right time using segments and tags. Personalize emails and give fans dynamic content based on their quiz answers.
                             </p>
                             <a href="#" class="card-header-action">
                                 Learn more
@@ -648,7 +665,7 @@
                     <article class="card card--gray card--center card--full card--trial">
                         <header class="card-header">
                             <h5 class="card-header-heading">
-                            Want to get to know your customers better?
+                                Want to grow a loyal, engaged fan base?
                             </h5>
                         </header>
                         <div class="card-body">
